Added redis service to backend docker-compose.yml and containerized backend node application

--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -8,18 +8,14 @@ services:
     environment:
       PRISMA_CONFIG: |
         port: 4466
-        # uncomment the next line and provide the env var PRISMA_MANAGEMENT_API_SECRET=my-secret to activate cluster security
-        # managementApiSecret: my-secret
         databases:
           default:
             connector: mongo
             uri: 'mongodb://prisma:prisma@mongo'
+
   mongo:
     image: mongo:3.6
     restart: always
-    # Uncomment the next two lines to connect to your your database from outside the Docker environment, e.g. using a database GUI like Compass
-    # ports:
-    # - "27017:27017"
     environment:
       MONGO_INITDB_ROOT_USERNAME: prisma
       MONGO_INITDB_ROOT_PASSWORD: prisma
@@ -27,5 +23,26 @@ services:
       - "27017:27017"
     volumes:
       - mongo:/var/lib/mongo
+
+  redis:
+    image: redis
+    container_name: cache
+    expose:
+      - 6739
+
+  app:
+    build: ./
+    volumes:
+      - ./app
+    ports:
+      - 4000:4000
+    links:
+      - redis
+      - prisma
+    environment:
+      - NODE_ENV=development
+      - PORT=4000
+      - REDIS_URL=redis://cache
+
 volumes:
   mongo:
