--- a/backend/package.json
+++ b/backend/package.json
@@ -7,12 +7,15 @@
     "codegen": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
+    "graphql-redis-subscriptions": "^2.1.1",
     "graphql-yoga": "1.18.3",
-    "prisma-client-lib": "1.34.10"
+    "prisma-client-lib": "1.34.10",
+    "redis": "^2.8.0"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^1.9.1",
     "@graphql-codegen/typescript": "^1.9.1",
+    "@types/redis": "^2.8.14",
     "nodemon": "^2.0.1",
     "prisma": "1.34.10",
     "ts-node": "7.0.1",
