--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,11 +8,18 @@
     "@types/react": "16.9.13",
     "@types/react-dom": "16.9.4",
     "apollo-boost": "^0.4.4",
+    "apollo-cache-inmemory": "^1.6.5",
+    "apollo-client": "^2.6.8",
+    "apollo-link": "^1.2.13",
+    "apollo-link-http": "^1.5.16",
+    "apollo-link-ws": "^1.0.19",
+    "apollo-utilities": "^1.3.3",
     "graphql": "^14.5.8",
     "react": "^16.12.0",
     "react-apollo": "^3.1.3",
     "react-dom": "^16.12.0",
     "react-scripts": "3.2.0",
+    "subscriptions-transport-ws": "^0.9.16",
     "typescript": "3.7.2"
   },
   "scripts": {
